// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table animes {
  id bigserial [primary key]
  title varchar
  episodes int
  studio varchar
  description varchar
  release_year inreger
  genre varchar
  rating float
}

Table users {
  id bigserial [primary key]
  username varchar
  email varchar
  password varchar
  created_at timestamp
}

Table watchedAnimes {
  id bigserial [primary key]
  user_id bigserial
  anime_id bigserial
  was_viewed timestamp
  tier string
}


Ref: users.id > watchedAnimes.user_id
Ref: animes.id > watchedAnimes.anime_id


